# qt_translation

./: CMakeLists.txt  Makefile  lang_en.ts  lang_zh.ts  main.cpp  mainwindow.cpp  mainwindow.h  myI18N_zh_CN.ts
